[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/1hlrvdjpj6r31.webp" type="Texture" id=1]
[ext_resource path="res://Fonts/galaktika_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://Themes/default.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/StartScreen/StartScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_00_delay-0.01s.png" type="Texture" id=5]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_08_delay-0.01s.png" type="Texture" id=6]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_02_delay-0.01s.png" type="Texture" id=7]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_10_delay-0.01s.png" type="Texture" id=8]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_03_delay-0.01s.png" type="Texture" id=9]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_09_delay-0.01s.png" type="Texture" id=10]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_05_delay-0.01s.png" type="Texture" id=11]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_04_delay-0.01s.png" type="Texture" id=12]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_07_delay-0.01s.png" type="Texture" id=13]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_11_delay-0.01s.png" type="Texture" id=14]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_12_delay-0.01s.png" type="Texture" id=15]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_13_delay-0.01s.png" type="Texture" id=16]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_15_delay-0.01s.png" type="Texture" id=17]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_16_delay-0.01s.png" type="Texture" id=18]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_14_delay-0.01s.png" type="Texture" id=19]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_06_delay-0.01s.png" type="Texture" id=20]
[ext_resource path="res://Assets/PerFrameAnim/Rain/frame_01_delay-0.01s.png" type="Texture" id=21]
[ext_resource path="res://Scenes/StartScreen/Settings.gd" type="Script" id=22]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 21 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 243, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitlePanel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 71, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NewGame:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 643, 137 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Settings:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 641, 132 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "main_menu_up"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 243, 360 ), Vector2( 404, 132 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "new_game_in"
tracks/0/type = "value"
tracks/0/path = NodePath("NewGame:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 643, 137 ), Vector2( 399, 137 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 404, 132 ), Vector2( 404, 365 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "settings_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Settings:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 641, 132 ), Vector2( 402, 109 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 404, 132 ), Vector2( 404, 363 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "title_down"
tracks/0/type = "value"
tracks/0/path = NodePath("TitlePanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 71, -100 ), Vector2( 76, 0 ) ]
}

[node name="StartScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 181 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground"]
position = Vector2( 319, 182.5 )
scale = Vector2( 0.498437, 0.598333 )
frames = SubResource( 5 )
frame = 4
playing = true

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="TitlePanel" type="Panel" parent="MenuCanvas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 71.0
margin_top = -100.0
margin_right = 559.0
margin_bottom = 1.0

[node name="Label" type="Label" parent="MenuCanvas/TitlePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -28.0
margin_right = 226.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Bramble Sword"

[node name="MainMenu" type="Panel" parent="MenuCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 243.0
margin_top = 360.0
margin_right = 405.0
margin_bottom = 507.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvas/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -46.0
margin_right = 56.0
margin_bottom = 46.0
theme = ExtResource( 3 )

[node name="NewGameButton" type="Button" parent="MenuCanvas/MainMenu/VBoxContainer"]
margin_right = 112.0
margin_bottom = 20.0
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuCanvas/MainMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 112.0
margin_bottom = 44.0
disabled = true
text = "Continue"

[node name="SettingsButton" type="Button" parent="MenuCanvas/MainMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 68.0
text = "Settings"

[node name="ExitButton" type="Button" parent="MenuCanvas/MainMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 92.0
text = "Exit"

[node name="Settings" type="Panel" parent="MenuCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 641.0
margin_top = 132.0
margin_right = 857.0
margin_bottom = 358.0
theme = ExtResource( 3 )
script = ExtResource( 22 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvas/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -104.0
margin_right = 98.0
margin_bottom = 104.0
theme = ExtResource( 3 )

[node name="CheckButton" type="CheckButton" parent="MenuCanvas/Settings/VBoxContainer"]
margin_right = 196.0
margin_bottom = 40.0
text = "Fullscreen"

[node name="Label" type="Label" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 44.0
margin_right = 196.0
margin_bottom = 58.0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 62.0
margin_right = 196.0
margin_bottom = 78.0
max_value = 1.0
step = 0.1

[node name="Label2" type="Label" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 82.0
margin_right = 196.0
margin_bottom = 96.0
text = "Sfx"

[node name="SFXSlider" type="HSlider" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 100.0
margin_right = 196.0
margin_bottom = 116.0
max_value = 1.0
step = 0.1

[node name="Label3" type="Label" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 120.0
margin_right = 196.0
margin_bottom = 134.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MenuCanvas/Settings/VBoxContainer"]
margin_top = 138.0
margin_right = 196.0
margin_bottom = 154.0
max_value = 1.0
step = 0.1

[node name="SettingsBackButton" type="Button" parent="MenuCanvas/Settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = -42.0
margin_right = 71.0
margin_bottom = -22.0
text = "Back"

[node name="SettingsSaveButton" type="Button" parent="MenuCanvas/Settings"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -43.0
margin_right = -28.0
margin_bottom = -23.0
text = "Save"

[node name="NewGame" type="Panel" parent="MenuCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 643.0
margin_top = 137.0
margin_right = 805.0
margin_bottom = 258.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvas/NewGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -48.5
margin_right = 56.0
margin_bottom = 57.5
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="MenuCanvas/NewGame/VBoxContainer"]
margin_right = 112.0
margin_bottom = 14.0
text = "Player Name"
align = 1

[node name="LineEdit" type="LineEdit" parent="MenuCanvas/NewGame/VBoxContainer"]
margin_top = 18.0
margin_right = 112.0
margin_bottom = 42.0
text = "Steebo"
align = 1
max_length = 12

[node name="NewGameStartButton" type="Button" parent="MenuCanvas/NewGame/VBoxContainer"]
margin_top = 46.0
margin_right = 112.0
margin_bottom = 66.0
text = "Begin"

[node name="NewGameBackButton" type="Button" parent="MenuCanvas/NewGame/VBoxContainer"]
margin_top = 70.0
margin_right = 112.0
margin_bottom = 90.0
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuCanvas"]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )
anims/main_menu_up = SubResource( 3 )
anims/new_game_in = SubResource( 6 )
anims/settings_in = SubResource( 7 )
anims/title_down = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="MenuCanvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="MenuCanvas/MainMenu/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MenuCanvas/MainMenu/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MenuCanvas/MainMenu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MenuCanvas/MainMenu/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="MenuCanvas/Settings/VBoxContainer/CheckButton" to="MenuCanvas/Settings" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="MenuCanvas/Settings/SettingsBackButton" to="." method="_on_SettingsBackButton_pressed"]
[connection signal="pressed" from="MenuCanvas/Settings/SettingsSaveButton" to="MenuCanvas/Settings" method="_on_SettingsSaveButton_pressed"]
[connection signal="text_changed" from="MenuCanvas/NewGame/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MenuCanvas/NewGame/VBoxContainer/NewGameStartButton" to="." method="_on_NewGameStartButton_pressed"]
[connection signal="pressed" from="MenuCanvas/NewGame/VBoxContainer/NewGameBackButton" to="." method="_on_NewGameBackButton_pressed"]
